Add grid row to dashboard area

--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@
 }
 .dashboard-area {
     border: solid blue;
+    grid-row-start: 1;
+    grid-row-end: 5;
 }
 .searchbar-and-account-area {
     border: solid red;
