--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
     border: solid black;
     height: 100vh;
     display: grid;
-    grid-template: 10% 10% 27.5% 25% 27.5% / 25% 25% 25% 25%;
+    grid-template: 10% 10% 27.5% 25% 27.5% / repeat(4, 25%);
 }
 .dashboard-area {
     border: solid blue;
@@ -26,7 +26,36 @@
     grid-row-end: 6;
     grid-column-start: 1;
     grid-column-end: 2;
+    display: grid;
+    grid-template: repeat(10, 10%) / 100%; 
+    
 }
+
+.icon-container {
+    border: solid black;
+    grid-row-start: 1;
+    grid-row-end: 1;
+    display: flex;
+    align-items: center;
+}
+
+.logo{
+    width: 50px;
+    height: 50px;
+    border: solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 20px;
+}
+
+.dashboard {
+    border: solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .searchbar-and-account-area {
     border: solid red;
     grid-row-start: 1;
