Add style to user information container

--- a/style.css
+++ b/style.css
@@ -56,6 +56,11 @@
     align-items: center;
 }
 
+.user-information-container {
+    border: solid black;
+    grid-row-start: 2;
+    grid-row-end: 6;
+}
 .searchbar-and-account-area {
     border: solid red;
     grid-row-start: 1;
