--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@
     grid-row-end: 2;
     grid-column-start: 2;
     grid-column-end: 5;
+    display: flex;
 }
 
 .search-bar-container {
@@ -82,6 +83,14 @@
 
 .search-bar-icon {
     color: black;
+}
+
+#search-box {
+    width: 40%;
+}
+
+.noti-user-name-container {
+    border: solid blue;
 }
 
 .navbar-area {
