--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@
     grid-column-start: 2;
     grid-column-end: 5;
     display: flex;
+    align-items: center;
 }
 
 .search-bar-container {
@@ -99,6 +100,7 @@
     width: 100%;
     display: flex;
     border: solid green;
+    justify-content: space-around;
     
 }
 
