--- a/style.css
+++ b/style.css
@@ -110,11 +110,37 @@
     grid-row-end: 3;
     grid-column-start: 2;
     grid-column-end: 5;
+    display: flex;
 }
 
 .user-icon-name-container {
     border: solid black;
     width: 50%;
+}
+
+.user-icon-name-container ul {
+    border: dashed black;
+    display: grid;
+    grid-template: repeat(2, 50%), 20% 80%;
+}
+
+.user-icon {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+.user-hello {
+    grid-column-start: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+
+.user-name {
+    grid-column-start: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
 }
 
 .list-post-container {
