--- a/style.css
+++ b/style.css
@@ -166,10 +166,13 @@
     grid-column-start: 2;
     grid-column-end: 5;
     display: grid;
-    grid-template: 10%, repeat(3, 30%) / repeat(2, 80%), 20%;
+    grid-template: 5%, 5%, 22%, 5%, 22%, 5%, 22%, 5% / 5%, 30%, 5%, 30%, 5%, 20%, 5%;
 }
 
 .header-container {
-    grid-row-start: 0;
-    
+    grid-row-start: 2;
+    grid-row-end: 3;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    border: solid black;
 }
