--- a/style.css
+++ b/style.css
@@ -165,14 +165,14 @@
     grid-row-end: 7;
     grid-column-start: 2;
     grid-column-end: 5;
-    display: grid;
-    grid-template: 5%, 5%, 22%, 5%, 22%, 5%, 22%, 5% / 5%, 30%, 5%, 30%, 5%, 20%, 5%;
 }
 
-.header-container {
-    grid-row-start: 2;
-    grid-row-end: 3;
-    grid-column-start: 2;
-    grid-column-end: 3;
+.header-container{
     border: solid black;
 }
+
+.project-post-container {
+    border: solid black;
+}
+
+
