--- a/style.css
+++ b/style.css
@@ -174,5 +174,10 @@
 .project-post-container {
     border: solid black;
 }
+.post-box {
+    width: 200px;
+    height: 150px;
+    border: solid black;
+}
 
 
