--- a/style.css
+++ b/style.css
@@ -174,9 +174,14 @@
 .project-post-container {
     border: solid black;
 }
+
+.announcement-header-container {
+    border: solid black;
+}
+
 .post-box {
-    width: 200px;
-    height: 150px;
+    width: 30%;
+    height: 100px;
     border: solid black;
 }
 
