--- a/style.css
+++ b/style.css
@@ -174,6 +174,16 @@
     grid-row-end: 3;
 }
 
+.project-post-container {
+    border: solid black;
+    display: grid;
+    grid-template: 32% 32% 32%/ 48% 48%;
+}
+.post-box {
+    border: solid red;
+    width: 200px;
+    height: 150px;
+}
 .announcement-area {
     border: solid black;
 }
