--- a/style.css
+++ b/style.css
@@ -178,11 +178,14 @@
     border: solid black;
     display: grid;
     grid-template: 32% 32% 32%/ 48% 48%;
+    height: 90%;
+    justify-content: center;
+    align-items: center;
 }
 .post-box {
     border: solid red;
-    width: 200px;
-    height: 150px;
+    width: 95%;
+    height: 200px;
 }
 .announcement-area {
     border: solid black;
