--- a/style.css
+++ b/style.css
@@ -40,13 +40,21 @@
 }
 
 .logo{
+    background-color: white;
     width: 50px;
     height: 50px;
-    border: solid black;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-left: 20px;
+    display: grid;
+    grid-template: repeat(4, 25%), repeat(2, 50%);
+}
+
+.logo-box {
+    border: solid var(--dasboard-background-color);
+    width: 12px;
+    height: 13px;
 }
 
 .dashboard {
