--- a/style.css
+++ b/style.css
@@ -109,16 +109,16 @@
 }
 
 .search-bar-container {
-    border: solid black;
     width: 70%;
+    display: flex;
+    column-gap: 10px;
 }
 
-.search-bar-icon {
-    color: black;
-}
 
 #search-box {
-    width: 40%;
+    width: 80%;
+    border-radius: 10px;
+    border: 1px solid var(--background-color)
 }
 
 .noti-user-name-container {
