--- a/style.css
+++ b/style.css
@@ -100,7 +100,6 @@
 }
 
 .searchbar-and-account-area {
-    border: solid red;
     grid-row-start: 1;
     grid-row-end: 2;
     grid-column-start: 2;
@@ -110,6 +109,7 @@
 }
 
 .search-bar-container {
+    margin-left: 15px;
     width: 70%;
     display: flex;
     column-gap: 10px;
