--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@
     border: dashed black;
     width: 100%;
     display: grid;
-    grid-template: repeat(2, 50%)/ 40% 60%;
+    grid-template: repeat(2, 50%)/ 15% 85%;
 }
 
 .li-user-info {
@@ -190,6 +190,8 @@
     grid-column-start: 2;
     grid-row-start: 1;
     grid-row-end: 2;
+    display: flex;
+    align-items: flex-end;
 }
 
 .user-name {
