--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@
     border: dashed black;
     width: 100%;
     display: grid;
-    grid-template: repeat(2, 50%)/ 15% 85%;
+    grid-template: repeat(2, 50%)/ repeat(5, 20%);
 }
 
 .li-user-info {
@@ -173,8 +173,8 @@
 }
 
 .user-icon {
-    grid-column-start: 1;
-    grid-column-end: 2;
+    grid-column-start: 2;
+    grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 3;
 }
@@ -187,15 +187,14 @@
 }
 
 .user-hello {
-    grid-column-start: 2;
-    grid-row-start: 1;
+    grid-column-start: 3;
     grid-row-end: 2;
     display: flex;
     align-items: flex-end;
 }
 
 .user-name {
-    grid-column-start: 2;
+    grid-column-start: 3;
     grid-row-start: 2;
     grid-row-end: 3;
 }
