--- a/style.css
+++ b/style.css
@@ -166,6 +166,7 @@
 
 .li-user-info {
     list-style-type: none;
+    
 }
 
 .user-icon .material-icons {
@@ -191,12 +192,17 @@
     grid-row-end: 2;
     display: flex;
     align-items: flex-end;
+    font-size: 15px;
+    font-weight: bold;
 }
 
 .user-name {
     grid-column-start: 3;
+    grid-column-end: 5;
     grid-row-start: 2;
     grid-row-end: 3;
+    font-size: 25px;
+    font-weight: bold;
 }
 
 .list-post-container {
