--- a/style.css
+++ b/style.css
@@ -150,7 +150,6 @@
 }
 
 .user-icon-name-container {
-    border: solid black;
     width: 50%;
     display: flex;
     justify-content: space-around;
@@ -158,7 +157,6 @@
 }
 
 .user-icon-name-container ul {
-    border: dashed black;
     width: 100%;
     display: grid;
     grid-template: repeat(2, 50%)/ repeat(5, 20%);
@@ -211,10 +209,24 @@
 }
 
 .list-post-container ul {
+    border: dashed red;
     height: 100%;
     display: flex;
     justify-content: space-around;
     align-items: center;
+}
+
+.li-post {
+    list-style-type: none;
+}
+
+.post-button {
+    background-color: var(--dasboard-background-color);
+    width: 5rem;
+    height: 2rem;
+    border-radius: 10px;
+    border: 0.5px;
+    cursor: pointer;
 }
 
 .project-display-area {
