--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@
     display: flex;
     justify-content: center;
     column-gap: 20px;
+    
 }
 
 .noti-li-container .material-icons {
@@ -146,6 +147,8 @@
     grid-column-end: 5;
     display: flex;
     justify-content: space-around;
+    /*box-shadow: 5px 5px rgba(0, 0, 0, 0.3)*/
+
 }
 
 .user-icon-name-container {
@@ -153,6 +156,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+
 }
 
 .user-icon-name-container ul {
@@ -229,6 +233,7 @@
 
 .project-display-area {
     border: solid red;
+    background-color: var(--background-color);
     grid-row-start: 3;
     grid-row-end: 7;
     grid-column-start: 2;
@@ -240,8 +245,8 @@
 .header {
     margin-left: 18px;
 }
+
 .project-area {
-    background-color: var(--background-color);
     grid-row-start: 1;
     grid-row-end: 3;
 }
@@ -249,16 +254,26 @@
 .project-post-container {
     border: solid black;
     display: grid;
-    grid-template: 32% 32% 32%/ 48% 48%;
+    grid-template: repeat(3, 32%)/ repeat(2, 48%);
     height: 100%;
     justify-content: center;
     align-items: center;
 }
 .post-box {
     background-color: #FFF;
-    border: solid red;
+    border-left: 5px solid orange;
+    border-radius: 10px;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
     width: 95%;
     height: 200px;
+    list-style-type: none;
+}
+
+.content-info {
+    margin: 10px;
+}
+.post-container-li {
+    list-style-type: none;
 }
 
 .announcement-area {
