--- a/style.css
+++ b/style.css
@@ -267,13 +267,27 @@
     width: 95%;
     height: 200px;
     list-style-type: none;
+    display: grid;
+    grid-template: 75% 25%, 100%;
 }
 
 .content-info {
-    margin: 10px;
+    margin: 5px 10px 5px 10px;
+    border: solid red;
+    grid-row-start: 1;
+    grid-row-end: 2;
 }
+
+.post-share-ul {
+    margin: 0 10px 0 10px;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    border: solid blue;
+}
+
 .post-container-li {
     list-style-type: none;
+    border: solid red;
 }
 
 .announcement-area {
