--- a/style.css
+++ b/style.css
@@ -283,6 +283,9 @@
     grid-row-start: 2;
     grid-row-end: 3;
     border: solid blue;
+    display: flex;
+    justify-content: flex-end;
+    column-gap: 20px;
 }
 
 .post-container-li {
