--- a/style.css
+++ b/style.css
@@ -294,13 +294,23 @@
 }
 
 .announcement-container {
-    border: solid red;
-    height: 95%;
+    background-color: white;
+    margin-top: 30px;
+    border-radius: 10px;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 15px;
 }
 
 .announcements-box {
-    border: solid black;
-    height: 30%;
+    border-bottom: 0.5px solid gray;
+    margin: 20px 0 0 0;
+    width: 80%;
+    height: 100%;
+    list-style-type: none;
 }
 
 .trending-area {
